--- a/UserInterface/Assets/Styling/InputFieldStyles.xaml
+++ b/UserInterface/Assets/Styling/InputFieldStyles.xaml
@@ -17,10 +17,20 @@
                             VerticalContentAlignment="Center"
                             Text="{Binding Text, RelativeSource={RelativeSource TemplatedParent}}"/>
                     </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="Validation.HasError" Value="True">
+                            <Trigger.Setters>
+                                <Setter Property="ToolTip" Value="{Binding RelativeSource={RelativeSource Self},Path=(Validation.Errors)[0].ErrorContent}"/>
+                                <Setter Property="BorderThickness"  Value="2"/>
+                                <Setter Property="BorderBrush" Value="Red"/>
+                            </Trigger.Setters>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
+
 
     <Style x:Key="InputField_XS" BasedOn="{StaticResource InputField}" TargetType="{x:Type TextBox}">
         <Setter Property="Width" Value="220"/>
