--- a/UserInterface/Assets/Styling/TextStyles.xaml
+++ b/UserInterface/Assets/Styling/TextStyles.xaml
@@ -30,5 +30,9 @@
     <Style x:Key="Header_Big" BasedOn="{StaticResource Header}" TargetType="{x:Type TextBlock}">
         <Setter Property="FontSize" Value="56"/>
     </Style>
+    <Style x:Key="Text_Warning" BasedOn="{StaticResource Header}" TargetType="{x:Type TextBlock}">
+        <Setter Property="FontSize" Value="48"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+    </Style>
 
 </ResourceDictionary>
