--- a/UserInterface/Views/Modals/ConfirmationModal.xaml
+++ b/UserInterface/Views/Modals/ConfirmationModal.xaml
@@ -17,9 +17,9 @@
                     <RowDefinition Height="2*" />
                     <RowDefinition Height="1*" />
                 </Grid.RowDefinitions>
-                <Button Grid.Column="0" Grid.Row="2"  Style="{StaticResource PrimaryButton_S}" Command="{Binding CloseModalCommand}" CommandParameter="true" Content="Ja" />
+                <Button Grid.Column="0" Grid.Row="2"  Style="{StaticResource PrimaryButton_S}" Command="{Binding ConfirmCommand}" CommandParameter="true" Content="Ja" />
 
-                <Button Grid.Column="1" Grid.Row="2"  Style="{StaticResource SecondaryButton_S}" Command="{Binding CloseModalCommand}" CommandParameter="true" Content="Nee" />
+                <Button Grid.Column="1" Grid.Row="2"  Style="{StaticResource SecondaryButton_S}" Command="{Binding DenyCommand}" CommandParameter="true" Content="Nee" />
             </Grid>
             
         </Grid>
