--- a/UserInterface/Assets/Styling/TextStyles.xaml
+++ b/UserInterface/Assets/Styling/TextStyles.xaml
@@ -8,6 +8,12 @@
         <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
     </Style>
 
+    <Style x:Key="TextWhite" TargetType="{x:Type TextBlock}">
+        <Setter Property="FontSize" Value="32"/>
+        <Setter Property="FontStyle" Value="Normal"/>
+        <Setter Property="Foreground" Value="{StaticResource White}"/>
+        <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
+    </Style>
     <Style x:Key="SubHeader" BasedOn="{StaticResource Text}" TargetType="{x:Type TextBlock}">
         <Setter Property="FontSize" Value="40"/>
         <Setter Property="FontWeight" Value="SemiBold"/>
