--- a/UserInterface/Views/Modals/TextQuestionModal.xaml
+++ b/UserInterface/Views/Modals/TextQuestionModal.xaml
@@ -65,6 +65,20 @@
                         <Rectangle.RadiusY>5</Rectangle.RadiusY>
                     </Rectangle>
 
+                    <Rectangle Panel.ZIndex="5" Width="520" Height="355" Fill="#CCCCCC" Opacity="0.4" Margin="0,50,0,0">
+                        <Rectangle.Style>
+                            <Style TargetType="Rectangle">
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding MultipleChoice}" Value="False">
+                                        <Setter Property="Visibility" Value="Visible" />
+                                    </DataTrigger>
+                                    <DataTrigger Binding="{Binding MultipleChoice}" Value="True">
+                                        <Setter Property="Visibility" Value="Collapsed" />
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Rectangle.Style>
+                    </Rectangle>
                     <ListView Width="510" Height="255" Name="Options" Margin="0,-40,0,0" ItemsSource="{Binding Options}" Style="{StaticResource ListViewStyle}" d:ItemsSource="{d:SampleData ItemCount=5}" >
                         <ListView.View>
                             <GridView>
@@ -112,6 +126,7 @@
                                     CommandParameter="{Binding OptionText}"
                                     Margin="0,10,10,10">
                                 <Image Source="{StaticResource di_plus}" Width="30" Height="30"/>
+                                
                             </Button>
                         </Grid>
                     </StackPanel>
