--- a/UserInterface/Views/TestManagementView.xaml
+++ b/UserInterface/Views/TestManagementView.xaml
@@ -23,16 +23,15 @@
                     <RowDefinition Height="28*"/>
                     <RowDefinition Height="18*"/>
                     <RowDefinition Height="45*"/>
-                    <RowDefinition Height="14*"/>
                 </Grid.RowDefinitions>
 
                 <StackPanel Grid.Row="0" Orientation="Vertical" >
-                    <TextBlock Style="{StaticResource Text_Big}" VerticalAlignment="Center" Text="Test vraag" Height="58" Width="auto"/>
+                    <TextBlock Style="{StaticResource Text}" VerticalAlignment="Center" Text="Test vraag" Height="58" Width="auto"/>
                     <TextBox Text="{Binding TestName, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource InputField_L}"/>
 
                 </StackPanel>
-                <StackPanel Grid.Row="1" Orientation="Vertical" Margin="0,5,0,70" Grid.RowSpan="2" >
-                    <TextBlock Style="{StaticResource Text_Big}" Text="Leeftijdsgroep" Width="auto" Margin="0,0,0,10"/>
+                <StackPanel Grid.Row="1" Orientation="Vertical" Margin="0,5,0,00" Grid.RowSpan="2" >
+                    <TextBlock Style="{StaticResource Text}" Text="Leeftijdsgroep" Width="auto" Margin="0,0,0,10"/>
                     <ComboBox Style="{StaticResource ComboBoxStyle}" Width="auto" Height="70"
                               SelectedValue="{Binding Audience.Label, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                               SelectedValuePath="Label" ItemsSource="{Binding AudiencesList}"
@@ -50,19 +49,22 @@
                         </ComboBox.ItemTemplate>
                     </ComboBox>
                 </StackPanel>
-                <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="0,5,0,1" Grid.RowSpan="2" >
-                    <TextBlock Style="{StaticResource Text_Big}" Text="Status" Width="280"/>
-                    <TextBlock Style="{StaticResource Text_Big}" Text="Actief" Width="160"/>
+                <StackPanel Grid.Row="2" Orientation="Horizontal"  Grid.RowSpan="1" >
+                    <TextBlock VerticalAlignment="Center" Style="{StaticResource Text}" Text="Status" Width="355"/>
+                    <Border Height="50"  Style="{StaticResource PillStyle}" >
+                        <TextBlock  x:Name="Status" Style="{StaticResource TextWhite}" Text="{Binding Status}" Width="160" HorizontalAlignment="Center"  TextAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
                 </StackPanel>
 
-
-                <Button Grid.Row="4" Style="{StaticResource PrimaryButton_M}"
-                         Command="{Binding SaveTestCommand}"
-                         Content="Opslaan"  Margin="50,0,50,0"/>
-
+                <StackPanel Grid.Row="3" Orientation="Vertical" Margin="0,85,0,0">
+                    <Button  Style="{StaticResource PrimaryButton_M}"
+                             Command="{Binding SaveTestCommand}"
+                             Content="Opslaan"  Margin="50,0,50,25"/>
+                    <Button Grid.Row="4" Style="{StaticResource SecondaryButton_M}"
+                            Command="{Binding BackToTestOverviewCommand}"
+                            Content="Annuleren"  Margin="50,0,50,0"/>
+                </StackPanel>
             </Grid>
-
-
             <Grid Grid.Column="1">
                 <StackPanel>
                     <TextBlock Text="Toonaudiometrie vragen" HorizontalAlignment="Center" Height="60" Style="{StaticResource SubHeader}"/>
@@ -142,7 +144,6 @@
                             Content="Toevoegen"  Margin="0,0,0,15"/>
                 </StackPanel>
             </Grid>
-            <!-- Second column content (ListView in one row) -->
             <Grid Grid.Column="2">
                 <StackPanel>
                     <TextBlock Text="Tekst vragen" HorizontalAlignment="Center" Height="60" Style="{StaticResource SubHeader}"/>
@@ -172,7 +173,7 @@
                                     <GridViewColumn Header="Vraag" Width="400">
                                         <GridViewColumn.CellTemplate>
                                             <DataTemplate>
-                                                <TextBlock Style="{StaticResource Text}" Text="{Binding Question}" />
+                                                <TextBlock Style="{StaticResource Text}" Text="{Binding Question}" TextWrapping="Wrap" />
                                             </DataTemplate>
                                         </GridViewColumn.CellTemplate>
                                     </GridViewColumn>
